# mssm_code

./: .aiexclude  .gitignore  README.md  getexamples.cmd  getexamples.sh  mirror_config.json  mirror_project.py  pres.md
app_template/: CMakeLists.txt  main.cpp
apps/: .gitignore  CMakeLists.txt  README.md  new_app.bat  new_app.ps1  new_app.sh  run-cmake-linux.sh
apps/opencv_demo/: CMakeLists.txt  README.md  main.cpp
apps/sample_project/: CMakeLists.txt  main.cpp
apps/sample_project/packaging/: CMakeLists.txt  cmake_install.cmake
apps/sample_project/packaging/Manifests/: app.rc
apps/webgpu_dawn_smoke/: CMakeLists.txt  main.cpp
libraries/armadillo/: CMakeLists.txt
libraries/array/: CMakeLists.txt  array.h
libraries/boost/: CMakeLists.txt
libraries/camera/: CMakeLists.txt
libraries/canvas/: CMakeLists.txt  canvas.h  vertextypes.h  vulkcanvas.cpp  vulkcanvas.h
libraries/canvas2d/: CMakeLists.txt  canvas2d.h  canvasExtent.cpp  canvasExtent.h
libraries/canvas3d/: CMakeLists.txt  ITriWriter.h  canvas3d.cpp  canvas3d.h  vertextypes3d.h
libraries/cmake/: AppAssets.cmake  CompilerWarnings.cmake  Packaging.cmake  PerAppCPackTargets.cmake  ProjectFinalize.cmake  ProjectInit.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  glsl-shaders.cmake  processProjectLibraries.cmake  util.cmake
libraries/color/: CMakeLists.txt  color.cpp  color.h
libraries/csv/: CMakeLists.txt  csvreader.cpp  csvreader.h  csvwriter.cpp  csvwriter.h
libraries/csv_reader/: CMakeLists.txt
libraries/dawn/: CMakeLists.txt
libraries/dime/: CMakeLists.txt
libraries/dxf_canvas/: CMakeLists.txt  DXFCanvas1.h  dxfcanvas.cpp  dxfcanvas.h  dxfcanvas1.cpp
libraries/earcut/: CMakeLists.txt
libraries/eigen/: CMakeLists.txt  eigen_assert.h.in
libraries/ffmpeg/: CMakeLists.txt
libraries/fmt/: CMakeLists.txt  print_compat.h
libraries/font/: CMakeLists.txt  vfontrenderer.cpp  vfontrenderer.h
libraries/fontinfo/: CMakeLists.txt  textinfo.cpp  textinfo.h
libraries/fontstash/: CMakeLists.txt
libraries/geometry/: CMakeLists.txt  geometry.h
libraries/glew/: CMakeLists.txt  readme_gjh.txt
libraries/googletest/: CMakeLists.txt
libraries/half_edge/: CMakeLists.txt  halfedgeloader.cpp  halfedgeloader.h  loopiterable.h  mesh.h  meshloader.cpp  meshloader.h
libraries/image/: CMakeLists.txt  image.cpp  image.h
libraries/inja/: CMakeLists.txt
libraries/json/: CMakeLists.txt
libraries/layout/: ARCHITECTURE.md  CMakeLists.txt  icondrawer.cpp  icondrawer.h  layoutadapter.cpp  layoutadapter.h  layoutbutton.cpp  layoutbutton.h  layoutcalcs.cpp  layoutcalcs.h  layoutcontainers.cpp  layoutcontainers.h  layoutcontext.cpp  layoutcontext.h  layoutcore.cpp  layoutcore.h  layoutdraghandle.cpp  layoutdraghandle.h  layoutexpander.cpp  layoutexpander.h  layoutflyout.cpp  layoutflyout.h  layouthelper.cpp  layouthelper.h  layoutimage.cpp  layoutimage.h  layoutlabel.cpp  layoutlabel.h  layoutmanager.cpp  layoutmanager.h  layoutmenu.cpp  layoutmenu.h  layoutmodalframe.cpp  layoutmodalframe.h  layoutscroll.cpp  layoutscroll.h  layoutslider.cpp  layoutslider.h  layouttabs.cpp  layouttabs.h  (+22 more)
libraries/linmath/: CMakeLists.txt
libraries/matrix_market/: CMakeLists.txt
libraries/mssm/: CMakeLists.txt  mssm.cpp  mssm.h
libraries/mssm_graphics/: CMakeLists.txt  graphics.cpp  graphics.h  graphicsbackend.h  graphicsbase.cpp  graphicsbase.h
libraries/mssm_graphics_dawn/: CMakeLists.txt  dawngraphicsbackend.cpp  dawngraphicsbackend.h
libraries/mssm_graphics_nanovg/: CMakeLists.txt  graphics.cpp  graphics.h  nanovggraphics.cpp  nanovggraphics.h  nanovggraphicsbackend.cpp  nanovggraphicsbackend.h  nanovgwindow.cpp  nanovgwindow.h
libraries/mssm_graphics_vulk/: CMakeLists.txt  graphics.cpp  graphics.h  graphics3d.cpp  graphics3d.h  vulkbackendwindow.cpp  vulkbackendwindow.h  vulkgraphicsbackend.cpp  vulkgraphicsbackend.h
libraries/mssm_webgpu/: CMakeLists.txt  webgpu_context.cpp  webgpu_context.h  webgpu_glfw_surface.cpp  webgpu_glfw_surface.h
libraries/obj_loader/: CMakeLists.txt
libraries/old_graphics/: CMakeLists.txt
libraries/opencv/: CMakeLists.txt
libraries/opencv_bridge/: CMakeLists.txt  opencv_bridge.cpp  opencv_bridge.h
libraries/paths/: CMakeLists.txt  paths.cpp  paths.h
libraries/poly_partition/: CMakeLists.txt
libraries/pugixml/: CMakeLists.txt
libraries/qt_docking/: CMakeLists.txt
libraries/rand/: CMakeLists.txt  rand.cpp
libraries/sdl/: CMakeLists.txt
libraries/serial/: CMakeLists.txt
libraries/sound/: CMakeLists.txt  soundengine.cpp  soundengine.h
libraries/static_mesh/: CMakeLists.txt  staticmesh.cpp  staticmesh.h  vertex3duv.h
libraries/stbi/: CMakeLists.txt  stbi_impl.cpp
libraries/svg/: CMakeLists.txt  nanosvg_impl.cpp  svg.cpp  svg.h
libraries/svg2/: CMakeLists.txt  main.cpp  parseinput.cpp  parseinput.h  svg.cpp  svg.h  svgelement.cpp  svgelement.h  svgpath.cpp  svgpath.h  svgshape.cpp  svgshape.h  svgstructelement.cpp  svgstructelement.h
libraries/svg_canvas/: CMakeLists.txt  SVGCanvas.h  svg.hpp  svgcanvas.cpp  svggraphicsold.cppold  svggraphicsold.hold
libraries/tinyxml2/: CMakeLists.txt
libraries/tracked/: CMakeLists.txt  tracked.h
libraries/triangularmesh/: CMakeLists.txt  triangularmesh.h
libraries/vec/: CMakeLists.txt  vec2d.h  vec3d.h  vec4d.h  vecUtil.h
libraries/vulk_canvas/: CMakeLists.txt  triwriter.h  vertexattrvulk.h  vulkcanvas.cpp  vulkcanvas.h
libraries/vulkan/: CMakeLists.txt  vk_enum_string_helper.h  vulkStbi.cpp  vulkStbi.h  vulkabstractwindow.cpp  vulkabstractwindow.h  vulkbuffer.cpp  vulkbuffer.h  vulkbufferpool.cpp  vulkbufferpool.h  vulkcanvasbase.cpp  vulkcanvasbase.h  vulkcommandbuffers.cpp  vulkcommandbuffers.h  vulkdescriptorset.cpp  vulkdescriptorset.h  vulkdevice.cpp  vulkdevice.h  vulkframebuffer.cpp  vulkframebuffer.h  vulkimage.cpp  vulkimage.h  vulkimageview.cpp  vulkimageview.h  vulkinstance.cpp  vulkinstance.cpp.bak  vulkinstance.h  vulkmemory.cpp  (+26 more)
packaging/: cmake_install.cmake
templates/: README.md  templates.csv
tools/: build_apps.ps1  dev_env.ps1  new_app.ps1  new_app.sh
(+47 files in other folders)
